Removed lazy loading from products page for now. Fixed font size on mobile nav drawer. Fixed image width for products page on mobile.

--- a/client/components/drawer/drawer.scss
+++ b/client/components/drawer/drawer.scss
@@ -3,13 +3,13 @@
 .DrawerContainer {
   position: fixed;
   left: 0;
-  top: -600;
-  height: 600px;
+  top: -2000;
+  min-height: 600px;
   width: 100%;
   background: white;
   border-bottom: 1px solid $gray;
   z-index: $z-index-drawer;
-  transition: top ease-out 300ms;
+  transition: top ease-out 400ms;
 
   .CloseIcon {
     font-size: 4em;
